fix: fix menu not collapsing on click

--- a/css/styles.css
+++ b/css/styles.css
@@ -394,6 +394,9 @@ input[type="text"], input[type="email"], input[type="tel"]{
 }
 
 @media screen and (min-width: 1px) and (max-width:479px){
+    .is-hidden{
+        display:none;
+    }
     textarea{
         min-width:50%;
         font-size:16px;
@@ -406,7 +409,10 @@ input[type="text"], input[type="email"], input[type="tel"]{
 }
 
 @media screen and (max-width: 480px){
-    
+    .is-hidden{
+        display:none;
+    }
+
     footer{
         width:100%;
     }
@@ -443,15 +449,23 @@ input[type="text"], input[type="email"], input[type="tel"]{
         display: flex;
         justify-content: space-evenly;
             position: fixed;
-            top:100px;
+            top:0;
             right: -100%;
-            background: #e8f0fe;
+            background: darkgrey;
             height: calc(100vh - 250px);
-            width: 50%;
+            width: 100%;
+            height:100%;
             flex-direction: column;
             align-items: center;
             transition: right 0.2s linear;
+            opacity:0.8;
 }
+
+.page-header_item .navigation-list li a{
+    font-size:26px;
+    color:white;
+}
+
     .projects-information_container{
         grid-template-columns:1fr;
         grid-gap:10px;
@@ -472,6 +486,9 @@ input#hamburger{
     }
 
 @media screen and (min-width:481px) and (max-width: 920px) {
+    .is-hidden{
+        display:none;
+    }
     .projects-information_container{
         grid-template-columns:1fr 1fr;
     }
@@ -511,14 +528,21 @@ input#hamburger{
         display: flex;
         justify-content: space-evenly;
             position: fixed;
-            top:100px;
+            top:0;
             right: -100%;
-            background: #e8f0fe;
+            background: darkgrey;
             height: calc(100vh - 250px);
-            width: 50%;
+            width: 100%;
+            height:100%;
             flex-direction: column;
             align-items: center;
             transition: right 0.2s linear;
+            opacity:0.8;
+}
+
+.page-header_item .navigation-list li a{
+    font-size:26px;
+    color:white;
 }
 }
 
